force-app/main/default/objects/Service_Request_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solid Waste</fullName>
                </value>
                <value>
                    <fullName>Roads</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Noise</fullName>
                </value>
                <value>
                    <fullName>Parks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clarifying_Questions__c</fullName>
        <label>Clarifying Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Priority__c</fullName>
        <label>Default Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <default>true</default>
                    <label>P2</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualifiers__c</fullName>
        <label>Disqualifiers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Cues__c</fullName>
        <label>Image Cues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Queue_Id__c</fullName>
        <description>Stores the Group (Queue) Id to route cases to.</description>
        <label>Owning Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Hours__c</fullName>
        <defaultValue>48</defaultValue>
        <label>SLA Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>311 Service Type</label>
    <nameField>
        <label>Service Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>311 Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>